code review/cleanup of ureport maps view

--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -16,10 +16,10 @@
     <script language="javascript">
     //get the map bounding box
         var map;
-        var minLat={{minLat}};
-        var maxLat={{maxLat}};
-        var minLon={{minLon}};
-        var maxLon={{maxLon}};
+        var minLat={{ min_lat }};
+        var maxLat={{ max_lat }};
+        var minLon={{ min_lon }};
+        var maxLon={{ max_lon }};
         var zoom=9;
 		var tag_poll_pk;
     </script>
