--- a/ureport/templates/ureport/map.html
+++ b/ureport/templates/ureport/map.html
@@ -1,61 +1,46 @@
 {% extends "layout-split-2.html" %}
 {% block title %}
-    Ureport Map - {{ block.super }}
+    uReport Map - {{ block.super }}
 {% endblock %}
 {% block stylesheets %}
-     {{ block.super }}
-<link type="text/css" rel="stylesheet"
-      href="{{MEDIA_URL}}ureport/css/ureport.css" />
+    {{ block.super }}
+    <link type="text/css" rel="stylesheet" href="{{MEDIA_URL}}ureport/css/ureport.css"/>
 {% endblock %}
 {% block javascripts %}
     {{ block.super }}
      <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
      <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
-
-    <script src="http://maps.google.com/maps?file=api&v=2&sensor=false&key={{map_key}}" type="text/javascript">
-</script>
+    <script src="http://maps.google.com/maps?file=api&v=2&sensor=false&key={{ map_key }}" type="text/javascript"></script>
     <script language="javascript">
     //get the map bounding box
         var map;
-        var minLat={{minLat}};
-        var maxLat={{maxLat}};
-        var minLon={{minLon}};
-        var maxLon={{maxLon}};
+        var minLat={{ min_lat }};
+        var maxLat={{ max_lat }};
+        var minLon={{ min_lon }};
+        var maxLon={{ max_lon }};
         var zoom=9;
-
-
     </script>
-
 {% endblock %}
-
-
 
 {% block left %}
     <div class="module">
         <h2>Polls</h2>
-     <div id="chart_polls">
-               {% include 'ureport/partials/map_polls.html'%}
+        <div id="chart_polls">
+            {% include 'ureport/partials/map_polls.html'%}
         </div>
-
     </div>
     <div id="map_legend" >
-    <h3>Key</h3>
-    <table>
-
-
-    </table>
-
-
+        <h3>Key</h3>
+        <table>
+        </table>
     </div>
-
 {% endblock %}
-
 
 {% block right %}
     <div class="module">
         <h2>Map</h2>
-    <div id="pie_chart">
-                 {% include 'ureport/partials/map.html'%}
+        <div id="pie_chart">
+            {% include 'ureport/partials/map.html'%}
         </div>
     </div>
 {%  endblock %}
