incorporated timeseries into dashboard

--- a/ureport/templates/ureport/dashboard.html
+++ b/ureport/templates/ureport/dashboard.html
@@ -44,6 +44,8 @@
             </div>
             <div id="poll_responses" style="display:none;">
             </div>
+            <div id="poll_timeseries" style="display:none;">
+            </div>
         </div>
     </div>
     <div id="map_legend" style="display:none;">
