--- a/ureport/templates/ureport/partials/timeseries.html
+++ b/ureport/templates/ureport/partials/timeseries.html
@@ -1,32 +1,19 @@
-{% extends "layout.html" %}
-{% block title %}
-    Poll Response Timeline - {{ block.super }}
-{% endblock %}
-{% block stylesheets %}
-    {{ block.super }}
-    <link type="text/css" rel="stylesheet"
-          href="{{MEDIA_URL}}ureport/css/ureport.css"/>
-{% endblock %}
-{% block javascripts %}
-    {{ block.super }}
-    <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
+<div id="div_timeseries">
 
-
-{% endblock %}
-{% block content %}
-    <script type="text/javascript ">
+</div>
+<script type="text/javascript ">
     var chart;
     var opts={
           chart: {
-             renderTo: 'container',
+             renderTo: 'div_timeseries',
              zoomType: 'x',
              spacingRight: 20
           },
-           title: {
-             text: 'Variation Of Number Of Messages Received Between {{ start|date:"Y-m-d"   }}  and {{ end|date:"Y-m-d" }}'
+          title: {
+             text: 'Variation Of Number Of Messages Received Between {{ start|date:"Y-m-d" }}  and {{ end|date:"Y-m-d" }}'
           },
-           subtitle: {
-             text: "For Poll: {{poll}}"
+          subtitle: {
+             text: "For Poll: {{ poll }}"
           },
           xAxis: {
              type: 'datetime',
@@ -76,29 +63,19 @@
                 }
              }
           },
-        credits:false,
-
+          credits:false,
           series: [{
              type: 'area',
              name: 'Responses vs Time',
              pointInterval: 3600 * 1000,
              pointStart: Date.UTC({{ start|date:"Y,m,d" }}),
              data:{{ counts }}
-
           }]
        };
-    $(document).ready(function() {
-         opts.tooltip.formatter=function (){
-         return '<b>'+ this.series.name +'</b><br/>'+
-                    Highcharts.dateFormat('%A, %b %e, %Y', this.x)+': '+this.y +' Responses';
-    }
-        chart = new Highcharts.Chart(opts);
-
-    });
-
-
+       opts.tooltip.formatter=function (){
+            return '<b>'+ this.series.name +'</b><br/>'+
+                       Highcharts.dateFormat('%A, %b %e, %Y', this.x)+': '+this.y +' Responses';
+       }
+       chart = new Highcharts.Chart(opts);
 </script>
-    <div id="container">
 
-    </div>
-{% endblock %}
