--- a/ureport/templates/ureport/poll_admin_base.html
+++ b/ureport/templates/ureport/poll_admin_base.html
@@ -9,7 +9,7 @@
 {% block content %}
 {{ block.super }}
 <div class="buttons"> 
-    <a href="/polls/new/" style="float:left"> 
+    <a href="{% url poll.views.new_poll %}" style="float:left"> 
       <img border="0" src="/static/rapidsms/icons/silk/add.png" alt=""/>Add New Poll
     </a> 
 </div>
