bug fix for editing reponses

--- a/ureport/templates/ureport/partials/response_row.html
+++ b/ureport/templates/ureport/partials/response_row.html
@@ -15,11 +15,11 @@
     <td class="response_options_col" style="width:6em">
     {% block actions_content %}
       <div class="buttons">
-          <a onclick="editResponse(this, {{ response.pk }});" href="javascript:void(0);">
+          <a onclick="editResponse(this, '{% url poll.views.edit_response response.pk %}');" href="javascript:void(0);">
               <img src="{{ MEDIA_URL }}poll/icons/silk/pencil.png" alt=""/> 
               Edit
           </a>
-          <a onclick="deleteResponse(this, {{ response.pk }});" class="negative">
+          <a onclick="deleteResponse(this, '{% url poll.views.delete_response response.pk %}');" href="javascript:void(0)" class="negative">
               <img style="vertical-alignment:bottom;padding-top:7px" src="{{ MEDIA_URL }}rapidsms/icons/silk/delete.png" alt=""/>
           </a>
       </div>
