--- a/ureport/templates/ureport/partials/poll_partial_base.html
+++ b/ureport/templates/ureport/partials/poll_partial_base.html
@@ -14,7 +14,7 @@
         }
         
         function saveResponse(link, url) {
-            form = $(link).parents(".form");
+            form = $(link).parents("form");
             form_data = form.serializeArray();
             $(link).parents("tr").load(url, form_data);
         }
