--- a/ureport/static/stylesheets/ureport.css
+++ b/ureport/static/stylesheets/ureport.css
@@ -1,15 +1,7 @@
-body {
-    background:url("/static/ureport/images/bg.png") repeat-x;
-}
-
-#header {
-    font-family: noseriff;
-    font-size: 8pt;
-    color:black;
-}
 #inner{
     margin-top:50px;
 }
+
 #header a {
     text-decoration: none;
     color: black;
@@ -57,6 +49,17 @@ body {
 
 #header {
     position:relative;
+    font-family: noseriff;
+    font-size: 8pt;
+    color:black;
+    border-bottom: 8px solid #144252;
+    background-color: #33A7D2;
+}
+
+div.module h3 {
+    font-size: 80%;
+    background-image: none;
+    background-color: #94D149;
 }
 
 #footer {
