--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -22,6 +22,7 @@
 
     </head>
     <body>
+    <div id="container">
         {% block header %}
         <div id="header">
             <div id="branding">
@@ -31,6 +32,7 @@
                 </a>
             </div>
 
+
             {% block auth %}
             <div id="auth">{% if user.is_authenticated %}
                 <a href="{% url rapidsms-logout %}">Log out {{ user.username }}</a>{% else %}
@@ -39,6 +41,7 @@
             {% endblock %}
 
             {% get_tabs as tabs %}
+        <div class="clear"></div>
             <ul id="tabs">{% for tab in tabs %}
                 <li class="tab{% if tab.is_active %} active{% endif %}">
                     <a href="{{ tab.url }}"><span>{{ tab.caption }}</span></a>
@@ -48,12 +51,13 @@
             {% endblock %}
         </div>
         {% endblock %}
-
-        <div id="inner">
+<div class="clear"></div>
+        <div id="inner_content">
             {% block content %}{% endblock %}
         </div>
-
+<div class="clear"></div>
         {% block footer %}
+
         <div id="footer">
             <p class="rights">
                 Copyright &copy; 2008 &#8211; 2010
@@ -64,5 +68,6 @@
             </p>
         </div>
         {% endblock %}
+    </div>
     </body>
 </html>
