--- a/ureport/templates/ureport/partials/piechart_module.html
+++ b/ureport/templates/ureport/partials/piechart_module.html
@@ -2,6 +2,7 @@
     <div style="width:100%;height:600px;" id="pie_{{ poll.pk }}">
     </div>
 </div>
+<script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
 <script language="javscript">
     plot_piechart('{{ poll.pk }}', '_{{ poll.pk }}');
 </script>
