cosmetic changes to tagline, fixes to best_viz logic

--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -28,7 +28,7 @@
             <div id="branding">
                 <a title="Return to the Dashboard" href="{% url rapidsms-dashboard %}">
                     <img id="img_logo" alt="Ureport" src="/static/ureport/images/brand.png"/>
-                    <span id="span_tagline">Voice matters</span>
+                    <span id="span_tagline">voice matters</span>
                 </a>
             </div>
 
