--- a/ureport/templates/ureport/partials/tag_cloud.html
+++ b/ureport/templates/ureport/partials/tag_cloud.html
@@ -1,5 +1,7 @@
-<div style='width:100%;clear:both;margin-bottom:30px;color:#3E576F;margin:5px;'><center style="font-size:16px;">Poll Results For</center>
+<div style='width:100%;clear:both;margin-bottom:30px;color:#3E576F;margin:5px;'><center style="font-size:16px;">Poll Results For</center>\
+{% if not unlabeled %}
     {{poll_qn}}
+{% endif %}
 </div>
 {%  for tag in tags%}
     <tt class="{{ tag.class }}">
