more cosmetic fixes

--- a/ureport/templates/ureport/partials/best_visualization.html
+++ b/ureport/templates/ureport/partials/best_visualization.html
@@ -1,4 +1,4 @@
-<span style="font-weight:bold;margin-bottom:5px">{{ poll.question }}</span>
+<span style="font-weight:bold;margin-bottom:5px;font-size:14pt">{{ poll.question }}</span>
 {% if tags %}
 
 {% include "/ureport/partials/tag_cloud.html" %}
