--- a/ureport/templates/ureport/partials/map_module.html
+++ b/ureport/templates/ureport/partials/map_module.html
@@ -1,7 +1,7 @@
 <div id="visual_{{ poll.pk }}">
     <div id="map_{{ poll.pk }}" class="mapmodule">
     </div>
-    <div id="map_legend_{{ poll.pk }}" style="display:none;">
+    <div id="map_legend_{{ poll.pk }}">
         <h3>Key</h3>
         <table class="key" border=0 style="float:left;max-width:30%;">
         </table>
