more cosmetic iterations

--- a/ureport/static/css/ureport.css
+++ b/ureport/static/css/ureport.css
@@ -2,8 +2,8 @@
     font-size: 8pt;
 }
 
-tt {
-    margin: 5px;
+.tag1, .tag2, .tag3, .tag4, .tag5, .tag6, .tag7 {
+    margin: 10px;
 }
 
 .tag1 {
