--- a/ureport/templates/ureport/homepage.html
+++ b/ureport/templates/ureport/homepage.html
@@ -22,14 +22,14 @@
 {% block modules %}
 <table style="width:100%">
 <tr>
-    <td style="width:25%">
+    <td valign="top" style="width:25%">
         <div id="column0">
             {% for mod in modules.0.modules %}
                     {% include module_partial_template %}
             {% endfor %}
         </div>
    </td>
-   <td style="width:75%">
+   <td valign="top" style="width:75%">
         <div id="column1">
             {% for mod in modules.1.modules %}
                     {% include module_partial_template %}
