--- a/ureport/templates/ureport/homepage.html
+++ b/ureport/templates/ureport/homepage.html
@@ -20,16 +20,16 @@
     </script>
 {% endblock %}
 {% block modules %}
-<table style="width:100%">
-<tr>
-    <td valign="top" style="width:25%">
+<table style="width:100%;border-style:none">
+<tr style="boder-style:none" >
+    <td style="boder-style:none" valign="top" style="width:25%">
         <div id="column0">
             {% for mod in modules.0.modules %}
                     {% include module_partial_template %}
             {% endfor %}
         </div>
    </td>
-   <td valign="top" style="width:75%">
+   <td style="boder-style:none" valign="top" style="width:75%">
         <div id="column1">
             {% for mod in modules.1.modules %}
                     {% include module_partial_template %}
@@ -37,8 +37,8 @@
         </div>
    </td>
 </tr>
-<tr>
-    <td colspan="2">
+<tr style="boder-style:none" >
+    <td style="boder-style:none" colspan="2">
         <div id="column2">
             {% for mod in modules.2.modules %}
                     {% include module_partial_template %}
