--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -29,6 +29,7 @@
                 <a title="Return to the Dashboard" href="{% url rapidsms-dashboard %}">
                     <img id="img_logo" alt="Ureport" src="/static/ureport/images/brand.png"/>
                     <span id="span_tagline">voice matters</span>
+                    <span id="span_info"><span id="span_total">{{ total_ureporters }}</span> voices strong - text "join" to 8500 to add yours!</span>
                 </a>
             </div>
 
