--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -18,6 +18,7 @@
         {% block javascripts %}
         <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/jquery-1.3.2.min.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}rapidsms/javascripts/collapse.js"></script>
+        <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/jquery-ui-1.8.11.custom.min.js"></script>
         
         {% endblock %}
             <script type="text/javascript">
