--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -65,6 +65,7 @@
             {% endblock %}
         </div>
         {% endblock %}
+     <div class="clear"></div>
         <div id="inner_content">
             {% block content %}{% endblock %}
         </div>
