--- a/ureport/templates/ureport/partials/tag_cloud.html
+++ b/ureport/templates/ureport/partials/tag_cloud.html
@@ -6,20 +6,17 @@
 </div>
 <div class="tags">
 {% for tag in tags%}
-    <tt class="{{ tag.class }}">
+    <tt id="tag{{ forloop.counter0 }}" class="{{ tag.class }}">
+       {% comment %}
+       Here comes a big, unbroken line.  This is for rendering reasons. Sorry :-(
+       {% endcomment %}
         <a
             {% if user.is_authenticated %}
                 onmouseover="$(this).next().attr('class', 'delete-tag')"
                 onmouseout="$(this).next().attr('class', 'default')"
             {% endif %}
             rel="tag"
-            class="tag_link" href="javascript:void(0)">
-            {{ tag.tag }}
-        </a>
-        {% if user.is_authenticated %}
-            <span class="default" onmouseover="$(this).attr('class', 'delete-tag-hover')" onmouseout="$(this).attr('class', 'default')" title="remove {{ tag.tag }}" onclick="add_tag('{{ tag.tag }}',tag_poll_pk)">
-            </span>
-        {% endif %}
+            class="tag_link" href="javascript:void(0)">{{ tag.tag }}</a>{% if user.is_authenticated %}<span class="default" onmouseover="$(this).attr('class', 'delete-tag-hover')" onmouseout="$(this).attr('class', 'default')" title="remove {{ tag.tag }}" onclick="add_tag('{{ tag.tag }}',tag_poll_pk)"></span>{% endif %}
     </tt>
 {%  endfor %}
 </div>
