--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -64,7 +64,7 @@
             {% endblock %}
         </div>
         {% endblock %}
-     <div style="clear:both">.</div>
+        <div style="clear:both"></div>
         <div id="inner_content">
             {% block content %}{% endblock %}
         </div>
