--- a/ureport/templates/ureport/partials/poll_admin_row.html
+++ b/ureport/templates/ureport/partials/poll_admin_row.html
@@ -9,12 +9,12 @@
 <td style="white-space:nowrap;width:25em">
     <a style="padding-top:7px;float:right" href="javascript:void(0);" onclick="deletePoll('{{object.pk}}','{{object.question|addslashes}}');"><img border="0" src="{{ MEDIA_URL }}rapidsms/icons/silk/delete.png"/></a>
     <div class="buttons">
-        {% if object.responses.all.count %}
+        {% if object.responses__count %}
             <a href="{% url poll-report object.pk %}">
                 <img src="{{ MEDIA_URL }}poll/icons/silk/zoom.png" alt=""/> Report
             </a>
             <a href="/ureport/{{ object.pk }}/responses/">
-                <img src="{{ MEDIA_URL }}poll/icons/silk/database_table.png" alt=""/> Responses ({{ object.responses.all.count }})
+                <img src="{{ MEDIA_URL }}poll/icons/silk/database_table.png" alt=""/> Responses ({{ object.responses__count }})
             </a>
         {% endif %}
         <a href="{% url poll.views.view_poll object.pk %}">
