cleanup of unused files and references

--- a/ureport/templates/ureport/poll_summary.html
+++ b/ureport/templates/ureport/poll_summary.html
@@ -1,4 +1,4 @@
-{% extends "ureport/content.html" %}
+{% extends "ureport/two-column.html" %}
 {% block content %}
 <div id="mod">
     <div id="columns">
