--- a/ureport/templates/ureport/three-square.html
+++ b/ureport/templates/ureport/three-square.html
@@ -3,7 +3,7 @@
     {{ block.super }}
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}poll/stylesheets/style.css" />
     <link type="text/css" rel="stylesheet" href="{{MEDIA_URL}}generic/stylesheets/generic.css"/>
-    <link type="text/css" rel="stylesheet" href="{{MEDIA_URL}}ureport/css/ureport.css"/>
+    <link type="text/css" rel="stylesheet" href="{{MEDIA_URL}}ureport/stylesheets/ureport.css"/>
 {% endblock %}
 {% block javascripts %}
     {{ block.super }}
