--- a/ureport/static/stylesheets/ureport.css
+++ b/ureport/static/stylesheets/ureport.css
@@ -278,3 +278,225 @@ div.module h3 {
 	clear:both;
 	height:0;
 }
+
+.poll_question {
+    font-size: 8pt;
+}
+
+.tag1 {
+    font-size: .8em;
+}
+
+.tag2 {
+    font-size: 1em;
+}
+
+.tag3 {
+    font-size: 1.2em;
+}
+
+.tag4 {
+    font-size: 1.6em;
+}
+
+.tag5 {
+    font-size: 2.0em;
+}
+
+.tag6 {
+    font-size: 2.8em;
+}
+
+.tag7 {
+    font-size: 3.6em;
+}
+
+#tag_cloud {
+    width: 400px;
+    padding: 1em;
+}
+
+#tag_cloud tt {
+    display: block;
+    text-align: center;
+    padding-top: 0em;
+    float: left;
+}
+
+#chart_polls {
+    min-height:300px;
+}
+
+#pie_chart{
+    min-height:300px;
+}
+
+.mapmodule {
+    height:300px;
+    width:100%;
+}
+
+#map {
+    height:400px;
+    width:100%;
+}
+
+#map_legend{
+    width:100%;
+}
+
+.f{
+    font-size:14px;
+    font-weight: bold;
+    font-family:tahoma,arial,sans-serif;
+}
+
+#tags a{
+    color:#000000;
+    padding:0;
+}
+
+#tags p>a{
+    color: #aad0d4;
+}
+
+.qns{
+    margin: 0 auto;
+}
+
+#pie{
+    width:100%;
+}
+
+div#visual{
+    clear:both;
+    width:100%;
+    min-height:300px;
+    margin-top:10px;
+}
+
+.ajax_loading{
+    background-image:url("../images/ajax-loader.gif");
+    background-repeat:no-repeat;
+    background-position: center center;
+}
+
+.delete-tag,.delete-tag-hover{
+    background-image:url(../images/delete_tag.png);
+    background-repeat:no-repeat;
+    width:14px;
+    height:14px;
+    display:inline-block;
+    vertical-align:absmiddle;
+    margin-top:1px;
+    padding:0px;
+}
+
+.delete-tag{
+    background-position:0 -30px;
+}
+
+.default{
+    background-position:0 -90px;
+}
+
+.delete-tag-hover {
+    cursor:pointer;
+    background-position:0 -4px;
+}
+
+#columns #column0 {
+    float: left;
+    width: 28%;
+    min-height: 400px;
+    height: auto !important;
+    height: 400px;
+    clear:left;
+}
+
+#columns #column1 {
+    float: right;
+    width: 68%;
+    min-height: 400px;
+    height: auto !important;
+    height: 400px;
+}
+
+#columns #column0 .widget {
+    margin: 0px 0px 0px 0px;
+    padding: 2px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+
+}
+
+#columns #column1 .widget {
+    margin: 0px 0px 0 0;
+    padding: 2px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+
+}
+
+span.message_history_contact{
+    font-size:1em;
+    color:red;
+    font-weight:bold;
+}
+
+span.message_history_stats{
+    font-size:12px;
+    color:#666;
+    font-weight:bold;
+    line-height:1.4em;
+}
+
+div.message_history_small{
+    font-size:11px;
+    color:#666;
+    padding:0 0 0 20px;
+}
+
+div.message_history_small p{
+    padding:5px;
+    margin:0 0 0 20px;
+    background:#e6e6e6;
+}
+
+div.message_history_small p.message_history_basemessage{
+    padding:0px;
+    margin:0 0 0 22px;
+    background:#ffffff;
+}
+
+span.message_history_outgoing{
+    color:green;
+    font-size:14px;
+}
+
+span.message_history_incoming{
+    color:blue;
+}
+
+span.message_history_date{
+    float:right;
+    font-size:11px;
+    color:#666;
+}
+
+div.message_history_replyForm{
+    padding-top:5px;
+    margin:0 0 0 20px;
+}
+
+div.message_history_replyForm tr{
+    padding:5px;
+    margin:0 0 0 20px;
+    background:#e6e6e6;
+}
+
+span.message_history_replies{
+    color:green;
+    font-size:11px;
+    padding:0 0 0 15px;
+}
