--- a/ureport/templates/ureport/poll_admin_base.html
+++ b/ureport/templates/ureport/poll_admin_base.html
@@ -6,6 +6,12 @@
     {{ block.super }}
     <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}poll/stylesheets/style.css" />
 {% endblock %}
+
+{% block javascripts %}
+    {{ block.super }}
+    <script src="{{MEDIA_URL}}poll/javascripts/polls.js" type="text/javascript"></script>
+{% endblock %}
+
 {% block content %}
 {{ block.super }}
 <div class="buttons"> 
